--- a/src/styles.css
+++ b/src/styles.css
@@ -1,6 +1,14 @@
+body {
+  width: 100%;
+  height: 100%;
+  margin: 0px;
+  padding: 0px;
+}
+
 .App {
   font-family: sans-serif;
   text-align: center;
+  padding: 8px;
 }
 
 .content {
